2007-02-13  Matthias Wimmer  <m@tthias.eu>

    * jsm/util.cc: updated memory management
    * jabberd/acl.cc: same
    * jabberd/config.cc: same
    * jabberd/lib/xmlnode.cc: same
    * jabberd/lib/jid.cc: same
    * jabberd/lib/messages.cc: same
    * jabberd/lib/xhash.cc: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/jutil.cc: same
    * jabberd/mio.cc: same
    * jabberd/base/base_dir.cc: same
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jabberd/jabberd.cc: same
    * jabberd/deliver.cc: same
    * jabberd/lib/hmac.cc: fixing bug in HMAC calculation

2007-02-12  Matthias Wimmer  <m@tthias.eu>

    * *.c, *.cc, *.h: updated license headers
    * *.c: switches to *.cc

2007-02-11  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: support for wildcards in certs
    * jabberd/lib/snprintf.c: removed - need buildin snprintf now
    * jabberd/lib/hash.cc: new SHA-1 implementation
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/hmac.c(c): changes due to new SHA-1 implementation
    * jabberd/lib/sha.c: removed old SHA-1 implementation
    * jabberd/mio_ssl.c: removed support for OpenSSL
    * jabberd/jabberd.h: same
    * jabberd/mio_xml.c: same
    * jabberd/mio.c: same
    * jabberd/jabberd.cc: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * pthsock/client.c: same
    * dialback/dialback.c: logging TLS protocols

2007-02-10  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: more info on rejected certificates

2007-02-09  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.c(c): working on virtual host support

2007-02-07  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.c: Checking id-on-xmppAddr when using GnuTLS now
    * jabberd/subjectAltName.asn: same
    * jabberd/subjectAltName_asn1_tab.c: same

2007-02-01  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.c(c): extended pool debugging to xmlnodes
    * jabberd/lib/pool.c: same